[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "riptide-all"
version = "0.9.0"
description = "Tool to manage development environments for web applications using containers - Meta Package"
readme = "README.rst"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Marco Köpcke", email = "hello@capypara.de" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "riptide-lib >= 0.9, < 0.10",
    "riptide-cli >= 0.9, < 0.10",
    "riptide-proxy >= 0.9, < 0.10",
    "riptide-engine-docker >= 0.9, < 0.10",
    "riptide-db-mysql >= 0.9, < 0.10",
    "riptide-plugin-php-xdebug >= 0.9, < 0.10"
]

[project.urls]
Repository = "https://github.com/theCapypara/riptide-all"
Documentation = "https://riptide-docs.readthedocs.io"

[tool.setuptools]
packages = []

[tool.setuptools.exclude-package-data]
"*" = ["*"]
